2009-06-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	Make the porter log the whole request line, not just the identifier,
	which for example does not include GET parameters.

2009-06-04  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/producers/playlist/Makefile.am:
	* flumotion/component/producers/playlist/playlist.py:
	* flumotion/component/producers/playlist/playlist.xml:
	* flumotion/component/producers/playlist/admin_gtk.py (added):
	* flumotion/component/producers/playlist/playlist.glade (added):
	Added admin UI for playlist-producer

2009-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	previous commit post-reviewed by: Jan Urbanski
	
	* flumotion/monitor/nagios/stream.py:
	Fix regexp to not require quick hack, courtesy perl-high Jan.
	Also remove log import, as it is not used by file.

2009-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/monitor/nagios/stream.py:
	Quick hack added to not pick up trailing " for url from asx
	playlists.

2009-06-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/scenario/steps/httpstreamersteps.py:
	Change the default port to 8800 (the defined on configuration) and
	don't let the streamer to override the porter's port when it has not
	been set.

2009-06-03  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Thomas Vander Stichele  <thomas at apestaart dot org>
	reviewed by: Jan

	* flumotion/twisted/fdserver.py:
	Improve logging of FD receiving.

	* flumotion/component/misc/porter/porter.py:
	Add and improve logging of handling and passing the connection.

	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpfile.py:
	Add logging of request handling stages.

	* flumotion/test/test_porter.py: