@@ -73,13 +73,14 @@
       </entries>
 
       <sockets>
-        <socket type="flumotion.component.plugs.request.RequestLoggerPlug"/>
+        <socket type="flumotion.component.plugs.request.RequestLoggerPlug" />
         <socket type="flumotion.component.plugs.base.ComponentPlug" />
-        <socket type="flumotion.component.plugs.streamdata.StreamDataProviderPlug"/>
+        <socket type="flumotion.component.plugs.streamdata.StreamDataProviderPlug" />
         <socket type="flumotion.component.plugs.rrd.ComponentRRDPlug" />
-        <socket type="flumotion.component.plugs.requestmodifier.RequestModifierPlug"/>
-        <socket type="flumotion.component.misc.httpserver.ratecontrol.RateControllerPlug"/>
-        <socket type="flumotion.component.misc.httpserver.fileprovider.FileProviderPlug"/>
+        <socket type="flumotion.component.plugs.requestmodifier.RequestModifierPlug" />
+        <socket type="flumotion.component.misc.httpserver.ratecontrol.RateControllerPlug" />
+        <socket type="flumotion.component.misc.httpserver.fileprovider.FileProviderPlug" />
+        <socket type="flumotion.component.misc.httpserver.metadataprovider.MetadataProviderPlug" />
       </sockets>
 
       <properties>
